--- a/css/style.css
+++ b/css/style.css
@@ -608,21 +608,24 @@ section{
    color:var(--red);
 }
 
+
 .form-container form{
-   background-color: var(--white);
    padding:2rem;
-   border-radius: .5rem;
    border:var(--border);
+   background-color: var(--white);
    box-shadow: var(--box-shadow);
-   text-align: center;
-   margin:0 auto;
-   max-width: 50rem;
+   border-radius: .5rem;
 }
 
 .form-container form h3{
-   font-size: 2.5rem;
+   border-radius: .5rem;
+   background-color: var(--black);
+   color:var(--white);
+   padding:1.5rem 1rem;
+   text-align: center;
    text-transform: uppercase;
-   color:var(--black);
+   margin-bottom: 2rem;
+   font-size: 2.5rem;
 }
 
 .form-container form p{
@@ -640,6 +643,35 @@ section{
    width: 100%;
    border-radius: .5rem;
 }
+
+.form-container form .flex{
+   display: flex;
+   flex-wrap: wrap;
+   gap:1.5rem;
+   justify-content: space-between;
+}
+
+.form-container form .flex .inputBox{
+   width: 49%;
+}
+
+.form-container form .flex .inputBox .box{
+   width: 100%;
+   border:var(--border);
+   border-radius: .5rem;
+   font-size: 1.8rem;
+   color:var(--black);
+   padding:1.2rem 1.4rem;
+   margin:1rem 0;
+   background-color: var(--light-bg);
+}
+
+.form-container form .flex .inputBox span{
+   font-size: 1.8rem;
+   color:var(--light-color);
+}
+
+
 
 .about .row{
    display: flex;
